--- a/index.html
+++ b/index.html
@@ -15,41 +15,66 @@
   </style>
 </head>
 <body>
+  <!-- Import Three.js -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
   <script>
+    // --- Scène ---
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.z = 3;
 
+    // --- Caméra ---
+    const camera = new THREE.PerspectiveCamera(
+      45,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    camera.position.set(0, 0, 3);
+
+    // --- Rendu ---
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    const light = new THREE.DirectionalLight(0xffffff, 1);
-    light.position.set(5, 3, 5);
-    scene.add(light);
+    // --- Lumières ---
+    const ambientLight = new THREE.AmbientLight(0x333333); // lumière douce partout
+    scene.add(ambientLight);
 
+    const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+    directionalLight.position.set(5, 3, 5);
+    scene.add(directionalLight);
+
+    // --- Texture Terre ---
     const textureLoader = new THREE.TextureLoader();
-    const earthTexture = textureLoader.load("https://raw.githubusercontent.com/trevorlinton/three-earth/master/images/2_no_clouds_4k.jpg");
+    const earthTexture = textureLoader.load(
+      "https://threejs.org/examples/textures/planets/earth_atmos_2048.jpg"
+    );
 
+    // --- Sphère Terre ---
     const geometry = new THREE.SphereGeometry(1, 64, 64);
     const material = new THREE.MeshPhongMaterial({ map: earthTexture });
     const earth = new THREE.Mesh(geometry, material);
     scene.add(earth);
 
+    // --- Contrôles souris ---
     const controls = new THREE.OrbitControls(camera, renderer.domElement);
     controls.enableDamping = true;
     controls.dampingFactor = 0.05;
     controls.enableZoom = false;
 
+    // --- Animation ---
     function animate() {
       requestAnimationFrame(animate);
+
+      // Terre tourne un peu toute seule
+      earth.rotation.y += 0.001;
+
       controls.update();
       renderer.render(scene, camera);
     }
     animate();
 
+    // --- Resize ---
     window.addEventListener("resize", () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
@@ -58,3 +83,4 @@
   </script>
 </body>
 </html>
+
